# shelly

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  INTEGRATION_ROADMAP.py  LICENSE  MANIFEST.in  README.d  README.md  go.mod  go.sum  main.go  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  shelly-dev
auth/: authcontroller.go
controllers/: authController.go  issecure.go  tokencontroller.go  usercontroller.go
database/: client.go  config.go  connection.go  main.go
middlewares/: auth.go
models/: user.go
scripts/: install.sh
shelly/: __init__.py  __main__.py  main.py
shelly/commands/: __init__.py  base.py  clone.py  clone_utils.py  config.py  git.py  init.py  list.py  open.py  roadmap.py  status.py
shelly/config/: __init__.py  manager.py  settings.py
shelly/core/: __init__.py  editor.py  git_manager.py  repository.py  utils.py
shelly/ui/: __init__.py  display.py  prompts.py
src/: App.jsx
src/app/features/posts/: postSlice.js
src/app/store/: store.js
src/features/Todo/: todoslice.js
tests/: test_commands.py  test_config.py  test_repository.py
types/: types.go
